--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/preset-env": "^7.15.0",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^27.0.6",
     "css-loader": "^6.2.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.24.2",
     "html-webpack-plugin": "^5.3.2",
     "jest": "^27.0.6",
     "style-loader": "^3.2.1",
